@@ -1035,8 +1035,9 @@ Fri Dec 22 13:33:31 CET 2000
 	- Fixed bug in a connect statement using varchars.
 	- Synced gram.y and preproc.y.   
 
-Tue Jan  9 20:24:56 CET 2001
+Mon Jan 22 17:56:02 CET 2001
 
-	- Synced gram.y.   
+	- Synced gram.y and preproc.y.   
+	- Added #include "postgres.h" to pgc.l.
 	- Set ecpg version to 2.8.0. 
 	- Set library version to 3.2.0.
